k8s/overlays/staging/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: sts-pprd.medialab.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: web
            servicePort: 80
  - host: sts-bo-pprd.medialab.sciences-po.fr
    http:
      paths:
        - path: /
          backend:
            serviceName: bo
            servicePort: 80
